# FantasyD3Baseball

./: .gitignore  Liberty League Fantasy Baseball Roster.xlsx  README.md  main.py  manage.py  pyproject.toml  send_data.py
.claude/: settings.local.json
.github/workflows/: nightly_scrape.yml  scrape_schedule.yml
fantasy_baseball/: asgi.py  settings.py  urls.py  wsgi.py
league/: admin.py  api_views.py  context_processors.py  forms.py  middleware.py  models.py  schedule.py  scoring.py  urls.py  views.py
league/fixtures/: bootstrap.json
league/migrations/: 0001_initial.py  0002_rename_save_pitchinggamelog_save_game.py  0003_player_class_year_position.py  0004_simplify_positions_rosterslot.py  0005_player_fantasy_team_since_alter_player_position.py  0006_alter_realgame_options_and_more.py  0007_realgame_source_url.py  0008_activityentry_pendingrequest_transaction.py  0009_player_cached_games_played_player_cached_ppg_and_more.py  0010_pendingrequest_user_message_and_more.py  0011_add_display_name_to_fantasy_team.py  0012_remove_hold_and_hr_against.py  0013_pendingrequest_missing_game_type.py  0014_leaguesettings.py  0015_trade_tradeitem.py  0016_transaction_notes.py  0017_weeklylineupslot.py  0018_excludedday.py  0019_pointsettings_coach_win_realgame_winner_coach.py  0020_pendingrequest_coach_and_more.py  0021_transaction_coach.py  0022_activityentry_coach.py  0023_tradeitem_coach_alter_tradeitem_player.py  0024_scheduledgame.py  0025_scheduledgame_box_score_url.py
league/templates/: 404.html  500.html  base.html
league/templatetags/: demo_tags.py  (+1 more)
(+61 files in other folders)
